Refining UncertainValuesCalculator and renaming classes